# teler-py-master

./: .gitignore  CODING_STANDARDS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: elevenlabs_router.py  main.py  test.json
tests/api/: test_calls.py
tests/unit/: test_clients.py  test_stream_connector.py
